# Navtra-License

./: .gitignore  README.md
Project-design/design/: 01-system.md  02-database.md  03-api.md  04-services.md  05-frontend.md  06-deployment.md  07-identity-anticlone.md  openapi.yaml
Project-design/prd/: v1.0-mvp.md
Project-source/forge-admin/: .gitignore  Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  preview.html  tailwind.config.js  tsconfig.json  vite.config.ts
Project-source/forge-server/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml
Project-source/forge-server/app/: main.py  settings.py  worker.py
Project-source/forge-server/app/adapters/cache/: base.py
Project-source/forge-server/app/adapters/cache/redis/: adapter.py
Project-source/forge-server/app/adapters/cache/valkey/: adapter.py
Project-source/forge-server/app/adapters/database/: base.py
Project-source/forge-server/app/adapters/database/dameng/: adapter.py
Project-source/forge-server/app/adapters/database/kingbase/: adapter.py
Project-source/forge-server/app/adapters/database/mysql/: adapter.py
Project-source/forge-server/app/adapters/database/oceanbase/: adapter.py
Project-source/forge-server/app/adapters/database/opengauss/: adapter.py
Project-source/forge-server/app/adapters/database/oracle/: adapter.py
Project-source/forge-server/app/adapters/database/polardb_pg/: adapter.py
Project-source/forge-server/app/adapters/database/polardb_x/: adapter.py
Project-source/forge-server/app/adapters/database/postgres/: adapter.py
Project-source/forge-server/app/adapters/database/tidb/: adapter.py
Project-source/forge-server/app/adapters/email/: __init__.py  base.py  templates.py
Project-source/forge-server/app/adapters/email/aliyun_dm/: adapter.py
Project-source/forge-server/app/adapters/email/aws_ses/: adapter.py
Project-source/forge-server/app/adapters/email/sendgrid/: adapter.py
Project-source/forge-server/app/adapters/email/smtp/: adapter.py
Project-source/forge-server/app/adapters/email/tencent_ses/: adapter.py
Project-source/forge-server/app/adapters/email/volcengine_dm/: adapter.py
Project-source/forge-server/app/adapters/object_storage/: base.py
Project-source/forge-server/app/adapters/object_storage/aliyun_oss/: adapter.py
Project-source/forge-server/app/adapters/object_storage/azure_blob/: adapter.py
Project-source/forge-server/app/adapters/object_storage/google_storage/: adapter.py
Project-source/forge-server/app/adapters/object_storage/huawei_obs/: adapter.py
Project-source/forge-server/app/adapters/object_storage/local/: adapter.py
Project-source/forge-server/app/adapters/object_storage/s3/: adapter.py
Project-source/forge-server/app/adapters/object_storage/tencent_cos/: adapter.py
Project-source/forge-server/app/adapters/object_storage/volcengine_tos/: adapter.py
Project-source/forge-server/app/adapters/search/: base.py
Project-source/forge-server/app/adapters/search/opensearch/: adapter.py
Project-source/forge-server/app/api/: deps.py  health.py
Project-source/forge-server/app/api/admin/v1/: audit.py  auth.py  clone_alerts.py  crl.py  customers.py  licenses.py  me.py  products.py  settings.py  users.py
Project-source/forge-server/app/api/edge/v1/: routes.py
Project-source/forge-server/app/cli/: __init__.py
Project-source/forge-server/app/core/: crypto.py  errors.py  handlers.py  ids.py  logging.py  security.py
Project-source/forge-server/app/db/: base.py  session.py  sync_bridge.py
Project-source/forge-server/app/licensing/: forge_file.py  keys.py  payload.py
Project-source/forge-server/app/middleware/: context.py
Project-source/forge-server/app/migrations/: env.py
Project-source/forge-server/app/migrations/versions/: 000001_users_create_table.py  000002_audit_log_create_table.py  000003_phase2_core_tables.py  000004_user_avatar.py  000005_identity_anticlone.py  000006_hard_delete_revocation_denorm.py
Project-source/forge-server/app/models/: __init__.py  audit.py  binding.py  customer.py  license.py  product.py  revocation.py  signing_key.py  user.py
Project-source/forge-server/app/permissions/: deps.py  registry.py  roles.py
Project-source/forge-server/app/repositories/: base.py  license.py  user.py
Project-source/forge-server/app/schemas/: auth.py  catalog.py  edge.py  license.py  user.py
Project-source/forge-server/app/services/: audit_service.py  auth_service.py  crl.py  edge.py  issuance.py  ratelimit.py  session_service.py
Project-source/forge-server/tests/: conftest.py  test_auth_flow.py  test_crl.py  test_crypto.py  test_edge.py  test_errors.py  test_issuance.py  test_licensing.py  test_profile.py  test_rbac.py  test_security.py  test_users.py
Project-source/forge-shared/: error-codes.yaml
forge-deploy/: HOTFIX-DEPLOY-v1.0.1.md  README.md
forge-deploy/docker-compose/: .env.example  README-CN.md  README-EN.md  (+1 more)
verifier-sdk/python/: pyproject.toml
verifier-sdk/python/forge_verifier/: __init__.py  fingerprint.py  online.py
verifier-sdk/python/tests/: test_online.py
(+95 files in other folders)
