[project]
name = "forge-verifier"
version = "1.0.0"
description = "Forge license Verifier SDK (Python) — embed in consumer products"
requires-python = ">=3.9"
dependencies = ["cryptography>=42.0.0"]

[project.scripts]
forge-verify = "forge_verifier.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["forge_verifier"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
